--- a/src/app/pokemons/pokemon-pagination/pokemon-pagination.component.scss
+++ b/src/app/pokemons/pokemon-pagination/pokemon-pagination.component.scss
@@ -3,4 +3,16 @@
   gap: 10px;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  button {
+    font-size: 10px;
+    padding: 5px 6px;
+  }
+
+  @media (min-width: 1440px) {
+    button {
+      font-size: 14px;
+      padding: 5px 15px;
+    }
+  }
 }
